k8s/racecourse/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: racecourse-service
spec:
  type: NodePort
  selector:
    app: racecourse
  ports:
    - protocol: TCP
      port: 3000
      name: http
