k8s/racecourse/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: racecourse-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: racecourse-service
                port:
                  number: 3000
